spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,6 @@ div.gif-container {
     margin-bottom: 1rem;
 }
 
+div.input-form {
+    margin-right: 2rem;
+}
